added backend, redis and docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,28 @@
 version: '3.7'
 
 services:
-  spoonacular:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  frontend:
+    build: ./frontend
     volumes:
-      - '.:/app'
-      - '/app/node_modules'
+      - ./frontend:/app
+      - /app/node_modules
     ports:
       - '3000:3000'
     environment:
       - NODE_ENV=development
+    depends_on:
+      - server
+      - redis
+
+  server:
+    build: ./server
+    volumes:
+      - ./server:/usr/src/app/
+      - /usr/src/app/node_modules # Remove this if you have pure JS dependencies
+    ports:
+      - "5000:5000"
+    depends_on:
+      - redis
 
   redis:
     image: redis:latest
