--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
     "@types/node": "^12.12.11",
     "@types/redis": "^2.8.14",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "redis": "^2.8.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon -wL",
     "build": "tsc -p ."
   },
   "devDependencies": {
