--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-flags-select": "^1.1.2",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.3",
     "axios": "^0.19.0",
@@ -18,6 +19,8 @@
     "lodash": "^4.17.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-flexbox-grid": "^2.1.2",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.2.0",
@@ -44,7 +47,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "tslint -c tslint.json"
+      "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
     ]
   },
   "browserslist": {
