--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
     "react-flexbox-grid": "^2.1.2",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.0.3",
