--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-flags-select": "^1.1.2",
+    "@types/react-loadable": "^5.5.2",
     "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.0.9",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^5.0.0",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
@@ -22,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
     "react-flexbox-grid": "^2.1.2",
+    "react-loadable": "^5.5.0",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
@@ -29,8 +31,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.2",
-    "typescript": "3.7.2",
-    "use-react-router": "^1.0.7"
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
