Frontend: Profile recipes, Backend: PostgreSQL integration and auth

--- a/server/package.json
+++ b/server/package.json
@@ -7,17 +7,33 @@
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.11",
     "@types/redis": "^2.8.14",
+    "@types/sequelize": "4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
+    "pg": "^7.14.0",
     "redis": "^2.8.0",
+    "sequelize": "4",
+    "sequelize-cli": "^5.5.1",
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "start": "nodemon -wL",
-    "build": "tsc -p ."
+    "start": "nodemon -L",
+    "build": "tsc -p .",
+    "migrate:undo": "node_modules/.bin/sequelize db:migrate:undo:all",
+    "migrate": "node_modules/.bin/sequelize db:migrate",
+    "db:reset": "npm run migrate:undo && npm run migrate",
+    "db:seed": "node_modules/.bin/sequelize db:seed:all",
+    "db:seed:undo": "node_modules/.bin/sequelize db:seed:undo:all",
+    "db:build": "npm run db:reset && npm run db:seed",
+    "db:create": "node_modules/.bin/sequelize db:create",
+    "db:drop": "node_modules/.bin/sequelize db:drop"
   },
   "devDependencies": {
     "nodemon": "^2.0.1",
