--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - /app/node_modules
     ports:
       - '3000:3000'
+      - '35729:35729' # warm reloading for react create app
     environment:
       - NODE_ENV=development
     depends_on:
@@ -23,8 +24,18 @@ services:
       - "5000:5000"
     depends_on:
       - redis
+      - postgres
 
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+
+  postgres:
+    image: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=spoonacular
