--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
     "@types/node": "^12.12.11",
     "@types/redis": "^2.8.14",
     "@types/sequelize": "4",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -17,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
+    "password-hash": "^1.2.2",
     "pg": "^7.14.0",
     "redis": "^2.8.0",
     "sequelize": "4",
