--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.23",
     "@types/lodash": "^4.14.123",
@@ -17,6 +20,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.11",
     "react": "^16.12.0",
